[project]
name = "rcdtool"
authors = [{ name = "David Waster", email = "wasterdavid@gmail.com" }]
version = "2.1.0"
requires-python = ">=3.9"
dependencies = ["Telethon", "filetype", "colored"]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]

[project.scripts]
rcdtool = "rcdtool:main.main"
